<?xml version="1.0"?>
<package format="3">
  <name>robotis_interfaces</name>
  <version>1.0.0</version>
  <description>Custom interfaces for ROBOTIS Physical AI Lineup.</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="kyu@robotis.com">Yeonguk Kim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>python3-numpy</build_depend>
  <exec_depend>python3-numpy</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>